--- a/babyblotter/templates/registration/password_reset_confirm.html
+++ b/babyblotter/templates/registration/password_reset_confirm.html
@@ -23,7 +23,7 @@
         </label>
         <div class="input-group mb-3 fade-in">
             <div class="input-group-addon">
-                <i class="fa fa-lock" aria-hidden="true"></i>
+                <i class="icon icon-lock" aria-hidden="true"></i>
             </div>
             {% render_field form.new_password1 name='new_password1' class+='form-control' id='password1-input-group' %}
         </div>
@@ -34,7 +34,7 @@
         </label>
         <div class="input-group mb-3 fade-in">
             <div class="input-group-addon">
-                <i class="fa fa-lock" aria-hidden="true"></i>
+                <i class="icon icon-lock" aria-hidden="true"></i>
             </div>
             {% render_field form.new_password2 name='new_password2' class+='form-control' id='password2-input-group' %}
         </div>
