--- a/babyblotter/templates/registration/password_reset_form.html
+++ b/babyblotter/templates/registration/password_reset_form.html
@@ -18,7 +18,7 @@
         </label>
         <div class="input-group mb-3 fade-in">
             <div class="input-group-addon">
-                <i class="fa fa-envelope" aria-hidden="true"></i>
+                <i class="icon icon-envelope" aria-hidden="true"></i>
             </div>
             {% render_field form.email name='email' class+='form-control' id='email-input-group' placeholder=form.email.label %}
         </div>
