--- a/core/templates/core/note_list.html
+++ b/core/templates/core/note_list.html
@@ -26,13 +26,13 @@
 
                                 {% if perms.core.change_note %}
                                     <a href="{% url 'note-update' note.id %}" class="btn btn-primary">
-                                        <i class="fa fa-pencil" aria-hidden="true"></i>
+                                        <i class="icon icon-update" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
 
                                 {% if perms.core.delete_note %}
                                     <a href="{% url 'note-delete' note.id %}" class="btn btn-danger">
-                                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                                        <i class="icon icon-delete" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
 
@@ -52,7 +52,7 @@
 
     {% if perms.core.add_note %}
         <a href="{% url 'note-add' %}" class="btn btn-sm btn-success">
-            <i class="fa fa-sticky-note" aria-hidden="true"></i> Add a Note
+            <i class="icon icon-note" aria-hidden="true"></i> Add a Note
         </a>
     {% endif %}
 
