--- a/dashboard/templates/cards/feeding.html
+++ b/dashboard/templates/cards/feeding.html
@@ -1,6 +1,6 @@
 <div class="card card-feeding border-primary mb-3">
     <div class="card-header text-white bg-primary h4">
-        <i class="fa fa-spoon pull-left" aria-hidden="true"></i>
+        <i class="icon icon-feeding pull-left" aria-hidden="true"></i>
         {% block header %}{% endblock %}
     </div>
     <div class="card-body text-primary">
