--- a/dashboard/templates/cards/sleep.html
+++ b/dashboard/templates/cards/sleep.html
@@ -1,6 +1,6 @@
 <div class="card card-sleep border-dark mb-3">
     <div class="card-header text-white bg-dark h4">
-        <i class="fa fa-bed pull-left" aria-hidden="true"></i>
+        <i class="icon icon-sleep pull-left" aria-hidden="true"></i>
         {% block header %}{% endblock %}
     </div>
     <div class="card-body text-dark">
