--- a/dashboard/templates/cards/sleep_day.html
+++ b/dashboard/templates/cards/sleep_day.html
@@ -7,9 +7,9 @@
     {% if total %}
         <strong>{{ total|duration_string }}</strong>
     {% else %}
-        <i class="fa fa-frown-o" aria-hidden="true"></i>
+        <i class="icon icon-sad" aria-hidden="true"></i>
         <strong>None yet today</strong>
-        <i class="fa fa-frown-o" aria-hidden="true"></i>
+        <i class="icon icon-sad" aria-hidden="true"></i>
     {% endif %}
 {% endblock %}
 
