--- a/dashboard/templates/cards/tummytime.html
+++ b/dashboard/templates/cards/tummytime.html
@@ -1,6 +1,6 @@
 <div class="card card-tummytime border-success mb-3">
     <div class="card-header text-white bg-success h4">
-        <i class="fa fa-smile-o pull-left" aria-hidden="true"></i>
+        <i class="icon icon-tummytime pull-left" aria-hidden="true"></i>
         {% block header %}{% endblock %}
     </div>
     <div class="card-body text-success">
