--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -15,7 +15,7 @@
                 <p class="card-text">
                     {% if perms.core.view_child %}
                         <a href="{% url 'dashboard-child' child.slug %}" class="btn btn-success">
-                            <i class="fa fa-tachometer" aria-hidden="true"></i>
+                            <i class="icon icon-dashboard" aria-hidden="true"></i>
                         </a>
                     {% endif %}
                 </p>
