--- a/babyblotter/templates/babyblotter/paginator.html
+++ b/babyblotter/templates/babyblotter/paginator.html
@@ -5,7 +5,7 @@
             {% if page_obj.has_previous %}
                 <li class="page-item">
                     <a class="page-link" href="?page={{ page_obj.previous_page_number }}" aria-label="Previous">
-                        <i class="fa fa-chevron-left" aria-hidden="true"></i>
+                        <i class="icon icon-chevron-left" aria-hidden="true"></i>
                         <span class="sr-only">Previous</span>
                     </a>
                 </li>
@@ -20,7 +20,7 @@
             {% if page_obj.has_next %}
                 <li class="page-item">
                     <a class="page-link" href="?page={{ page_obj.next_page_number }}" aria-label="Next">
-                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
+                        <i class="icon icon-chevron-right" aria-hidden="true"></i>
                         <span class="sr-only">Next</span>
                     </a>
                 </li>
