--- a/core/templates/core/diaperchange_list.html
+++ b/core/templates/core/diaperchange_list.html
@@ -31,13 +31,13 @@
 
                                 {% if perms.core.change_diaperchange %}
                                     <a href="{% url 'diaperchange-update' change.id %}" class="btn btn-primary">
-                                        <i class="fa fa-pencil" aria-hidden="true"></i>
+                                        <i class="icon icon-update" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
 
                                 {% if perms.core.delete_diaperchange %}
                                     <a href="{% url 'diaperchange-delete' change.id %}" class="btn btn-danger">
-                                        <i class="fa fa-trash-o" aria-hidden="true"></i>
+                                        <i class="icon icon-delete" aria-hidden="true"></i>
                                     </a>
                                 {% endif %}
 
@@ -57,7 +57,7 @@
 
     {% if perms.core.add_diaperchange %}
         <a href="{% url 'diaperchange-add' %}" class="btn btn-sm btn-success">
-            <i class="fa fa-trash" aria-hidden="true"></i> Add a Change
+            <i class="icon icon-diaperchange" aria-hidden="true"></i> Add a Change
         </a>
     {% endif %}
 
