--- a/dashboard/templates/cards/diaperchange.html
+++ b/dashboard/templates/cards/diaperchange.html
@@ -1,6 +1,6 @@
 <div class="card card-diaperchange border-danger mb-3">
     <div class="card-header text-white bg-danger h4">
-        <i class="fa fa-trash pull-left" aria-hidden="true"></i>
+        <i class="icon icon-diaperchange pull-left" aria-hidden="true"></i>
         {% block header %}{% endblock %}
     </div>
     <div class="card-body text-danger">
