--- a/reports/templates/reports/timeline.html
+++ b/reports/templates/reports/timeline.html
@@ -6,64 +6,20 @@
 {% block content %}
     <h1 class="text-center">Timeline</h1>
     <h2 class="text-center text-muted">{{ object }}</h2>
+    <h3 class="text-center">{{ date|date }}</h3>
     <ul class="timeline">
         {% for object in objects %}
             <li>
-                <div class="timeline-badge bg-info"><i class="icon icon-{{ object.model_name }}"></i></div>
-                <div class="card">
+                <div class="timeline-badge"><i class="icon icon-{{ object.model_name }}"></i></div>
+                <div class="card text-right">
                     <div class="card-body">
-                        {{ object }}
+                        {{ object.event }}
+                    </div>
+                    <div class="card-footer text-muted">
+                        {{ object.time|time }}
                     </div>
                 </div>
             </li>
         {% endfor %}
-        <li class="timeline-inverted">
-            <div class="timeline-badge bg-warning"><i class="fa fa-bed"></i></div>
-            <div class="card">
-                <div class="card-body">
-                    This is some text within a card block.
-                </div>
-            </div>
-        </li>
-        <li>
-            <div class="timeline-badge bg-danger"><i class="fa fa-spoon"></i></div>
-            <div class="card">
-                <div class="card-body">
-                    This is some text within a card block.
-                </div>
-            </div>
-        </li>
-        <li class="timeline-inverted">
-            <div class="timeline-badge bg-default"><i class="fa fa-spoon"></i></div>
-            <div class="card">
-                <div class="card-body">
-                    This is some text within a card block.
-                </div>
-            </div>
-        </li>
-        <li>
-            <div class="timeline-badge bg-default"><i class="fa fa-smile-o"></i></div>
-            <div class="card">
-                <div class="card-body">
-                    This is some text within a card block.
-                </div>
-            </div>
-        </li>
-        <li>
-            <div class="timeline-badge bg-default"><i class="fa fa-spoon"></i></div>
-            <div class="card">
-                <div class="card-body">
-                    This is some text within a card block.
-                </div>
-            </div>
-        </li>
-        <li class="timeline-inverted">
-            <div class="timeline-badge bg-success"><i class="fa fa-bed"></i></div>
-            <div class="card">
-                <div class="card-body">
-                    This is some text within a card block.
-                </div>
-            </div>
-        </li>
     </ul>
 {% endblock %}
