--- a/babyblotter/templates/babyblotter/paginator.html
+++ b/babyblotter/templates/babyblotter/paginator.html
@@ -12,9 +12,11 @@
             {% endif %}
 
             {% for num in page_obj.paginator.page_range %}
-                <li class="page-item{% if num == page_obj.number %} active{% endif %}">
-                    <a class="page-link" href="?page={{ num }}">{{ num }}</a>
-                </li>
+                {% if num > page_obj.number|add:"-3" and num < page_obj.number|add:"3" %}
+                    <li class="page-item{% if num == page_obj.number %} active{% endif %}">
+                        <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                    </li>
+                {% endif %}
             {% endfor %}
 
             {% if page_obj.has_next %}
