Default to current time for diaper change and end field entries.

--- a/core/templates/core/tummytime_form.html
+++ b/core/templates/core/tummytime_form.html
@@ -46,6 +46,7 @@
                 useCurrent: false
             });
             $('#id_end').datetimepicker({
+                defaultDate: 'now',
                 format: 'YYYY-MM-DD HH:mm:ss'
             });
         });
