--- a/core/templates/core/diaperchange_form.html
+++ b/core/templates/core/diaperchange_form.html
@@ -42,6 +42,7 @@
     <script type="text/javascript">
         $(function () {
             $('#id_time').datetimepicker({
+                defaultDate: 'now',
                 format: 'YYYY-MM-DD HH:mm'
             });
         });
