--- a/core/templates/core/timer_form.html
+++ b/core/templates/core/timer_form.html
@@ -1,5 +1,4 @@
 {% extends 'babyblotter/page.html' %}
-{% load widget_tweaks %}
 {% load duration %}
 
 {% block title %}Timer{% endblock %}
@@ -10,25 +9,5 @@
     {% else %}
         <h1>Start Timer</h1>
     {% endif %}
-    <form role="form" method="post">
-        {% csrf_token %}
-        {% for field in form %}
-            <div class="form-group">
-                <label for="id_{{ field.name }}">{{ field.label }}</label>
-                {% if field.errors %}
-                    {{ field|add_class:"form-control is-invalid" }}
-                {% else %}
-                    {{ field|add_class:"form-control" }}
-                {% endif %}
-                {% if field.help_text %}
-                    <p class="help-block"><small>{{ field.help_text }}</small></p>
-                {% endif %}
-                {% if field.errors %}
-                    <p class="invalid-feedback">{% for error in  field.errors %}{{ error }}{% endfor %}</p>
-                {% endif %}
-            </div>
-        {% endfor %}
-        <button type="submit" class="btn btn-success">Submit</button>
-        <a href="{% url 'timer-list' %}" class="btn btn-default">Cancel</a>
-    </form>
+    {% include 'babyblotter/form.html' %}
 {% endblock %}
