--- a/core/templates/core/child_form.html
+++ b/core/templates/core/child_form.html
@@ -20,7 +20,7 @@
 {% block javascript %}
     <script type="text/javascript">
         $(function () {
-            $('#id_birth_date').datetimepicker({
+            $('#datetimepicker_birth_date').datetimepicker({
                 viewMode: 'years',
                 format: 'YYYY-MM-DD'
             });
