--- a/core/templates/core/diaperchange_form.html
+++ b/core/templates/core/diaperchange_form.html
@@ -20,7 +20,7 @@
 {% block javascript %}
     <script type="text/javascript">
         $(function () {
-            $('#id_time').datetimepicker({
+            $('#datetimepicker_time').datetimepicker({
                 defaultDate: 'now',
                 format: 'YYYY-MM-DD HH:mm'
             });
