--- a/core/templates/core/sleep_form.html
+++ b/core/templates/core/sleep_form.html
@@ -20,11 +20,11 @@
 {% block javascript %}
     <script type="text/javascript">
         $(function () {
-            $('#id_start').datetimepicker({
+            $('#datetimepicker_start').datetimepicker({
                 format: 'YYYY-MM-DD HH:mm',
                 useCurrent: false
             });
-            $('#id_end').datetimepicker({
+            $('#datetimepicker_end').datetimepicker({
                 defaultDate: 'now',
                 format: 'YYYY-MM-DD HH:mm'
             });
