Use form classes to set appropriate field attributes in date/time fields.
Using a custom input element in the template caused issues with default values (e.g. when set by a timer).

--- a/babyblotter/templates/babyblotter/form.html
+++ b/babyblotter/templates/babyblotter/form.html
@@ -28,12 +28,11 @@
                                 <div class="input-group-addon" data-target="#datetimepicker_{{ field.name }}" data-toggle="datetimepicker">
                                     <i class="fa fa-calendar"></i>
                                 </div>
-                                <input name="{{ field.html_name }}"
-                                       required="{{ field.required }}"
-                                       class="form-control datetimepicker-input{% if field.errors %} is-invalid{% endif %}"
-                                       data-target="#datetimepicker_{{ field.name }}"
-                                       id="id_{{ field.name }}"
-                                       type="text"/>
+                                {% if field.errors %}
+                                    {{ field|add_class:"form-control is-invalid" }}
+                                {% else %}
+                                    {{ field|add_class:"form-control" }}
+                                {% endif %}
                             </div>
                         </div>
                     </div>
