Add time since to Timeline entries.

--- a/reports/templates/reports/timeline.html
+++ b/reports/templates/reports/timeline.html
@@ -28,7 +28,7 @@
                         {{ object.event }}
                     </div>
                     <div class="card-footer text-muted">
-                        {{ object.time|time }}
+                        {{ object.time|timesince }} ago ({{ object.time|time }})
                     </div>
                 </div>
             </li>
