Add and use a "Blue Orange" darker theme.

--- a/babyblotter/static_src/scss/_variables.scss
+++ b/babyblotter/static_src/scss/_variables.scss
@@ -1,4 +1,5 @@
 @import 'functions';
 @import '../../../node_modules/bootstrap/scss/variables';
+@import 'themes/blueorange';
 
-// Baby Blotter site-wide custom variables. */
+// Baby Blotter site-wide variables.
