Tweak dark colors and remove custom coloring classes from some elements.

--- a/dashboard/templates/cards/sleep.html
+++ b/dashboard/templates/cards/sleep.html
@@ -1,9 +1,9 @@
-<div class="card card-sleep border-dark mb-3">
-    <div class="card-header text-white bg-dark h4">
+<div class="card card-sleep border-secondary mb-3">
+    <div class="card-header text-white bg-secondary h4">
         <i class="icon icon-sleep pull-left" aria-hidden="true"></i>
         {% block header %}{% endblock %}
     </div>
-    <div class="card-body text-dark">
+    <div class="card-body">
         <h4 class="card-title">{% block title %}{% endblock %}</h4>
         <div class="card-text">{% block content %}{% endblock %}</div>
     </div>
