--- a/dashboard/templates/dashboard/child.html
+++ b/dashboard/templates/dashboard/child.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-    <div class="bg-light text-dark rounded text-center pb-2">
+    <div class="rounded text-center pb-2">
         <h1 class="display-4">{{ object }}</h1>
 
         <div class="dropdown">
