--- a/dashboard/templates/cards/diaperchange_types.html
+++ b/dashboard/templates/cards/diaperchange_types.html
@@ -11,19 +11,19 @@
         <div class="progress mt-3">
 
             {% if info.wet_pct > 0 %}
-                <div class="progress-bar bg-info lead"
+                <div class="progress-bar bg-primary lead"
                      role="progressbar"
                      style="width: {{ info.wet_pct }}%;">{{ info.wet }}&nbsp;wet</div>
             {% endif %}
 
             {% if info.solid_pct > 0 %}
-                <div class="progress-bar bg-dark lead"
+                <div class="progress-bar bg-secondary lead"
                      role="progressbar"
                      style="width: {{ info.solid_pct }}%;">
                     <strong>{{ info.solid }}</strong>&nbsp;solid</div>
             {% endif %}
         </div>
-        <div class="text-center text-dark small">
+        <div class="text-center text-light small">
             {% if key == 0  %}
                 today
             {% elif key == 1 %}
