Brighten red and orange in Blue Orange theme.

--- a/babyblotter/static_src/scss/themes/blueorange.scss
+++ b/babyblotter/static_src/scss/themes/blueorange.scss
@@ -8,8 +8,8 @@ $blue: #236e96;
 $indigo: #472395;
 $purple: #712395;
 $pink: #952393;
-$red: #952330;
-$orange: #984c00;
+$red: #a72431;
+$orange: #ff8f00;
 $yellow: #ffbe42;
 $green: #239556;
 $teal: #5abccc;
