Use green for quick timer start button.

--- a/babyblotter/templates/babyblotter/nav-dropdown.html
+++ b/babyblotter/templates/babyblotter/nav-dropdown.html
@@ -5,7 +5,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="/"><span class="text-info">Baby</span> Blotter</a>
 
-        <a class="d-lg-none d-md-none text-secondary ml-auto p-0 mr-3" href="{% url 'timer-add-quick' %}">
+        <a class="d-lg-none d-md-none text-success ml-auto p-0 mr-3" href="{% url 'timer-add-quick' %}">
             <i class="icon icon-2x icon-timer" aria-hidden="true"></i>
         </a>
 
